# buddy_alloc

./: .clangd  .gitignore  Makefile.am  README.md  adapter_demo.c  bd_region.h  bd_static_arena.h  buddy_alloc.c  buddy_alloc.h  buddy_alloc_front.c  buddy_alloc_front.h  buddy_alloc_test.c  buddy_alloc_test_2.c  buddy_alloc_vec_adapt.c  buddy_alloc_vec_adapt.h  build-pie-fsections.sh  build-pie-lto-adapter-demo.sh  build.sh  configure.ac
.github/workflows/: makefile.yml
examples/: .clangd  Makefile.am  adapter_demo.c  heap_example.c  mmap_example.c
